--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "packages/git-submodule-1"]
 	path = packages/git-submodule-1
 	url = https://github.com/AKclown/git-submodule-1.git
+[submodule "packages/git-submodule-2"]
+	path = packages/git-submodule-2
+	url = https://github.com/AKclown/git-submodule-2.git
